# Plane_Detection

./: CMakeLists.txt  README.md
data/: check_label.txt
doc/: README_CN.md  Technical Background and Scheme Design.md  Technical_Background_and_Scheme_Design.md  Test overview and analysis.md
include/: ransac.h  utils.h
source/: main.cpp  ransac.cpp  utils.cpp
viz/: Pointcloud-Visualization-With-Open3D.py
